--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+		<dependency>
 	    	<groupId>io.jsonwebtoken</groupId>
 	    	<artifactId>jjwt-api</artifactId>
 	    	<version>0.11.5</version>
@@ -64,6 +68,10 @@
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt-jackson</artifactId>
 		    <version>0.11.5</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+  			<artifactId>spring-security-crypto</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
